fix(pk-portfolio): modified ~/components/_list.scss, corrected icon vertical stretch bug within mobile resolutions.

--- a/apps/pk-portfolio/src/scss/components/_list.scss
+++ b/apps/pk-portfolio/src/scss/components/_list.scss
@@ -10,23 +10,24 @@
   }
 
   & > ul > li {
+    display: flex;
     border-bottom: 1px solid variables.$color-border-default;
     padding: 2rem 0;
-    display: flex;
 
     & > div {
-      margin-right: 1rem;
-      padding: 0.2rem;
+      margin-right: 15px;
       border: 1px solid variables.$color-foreground-black;
       border-radius: 5px;
-      width: 50px;
-      height: 50px;
+      max-height: 50px;
+      flex-basis: 50px;
       background-color: variables.$color-background-muted-white;
       & > svg { width: 100%; }
     }
 
     & > section {
-      & > h3 { margin-top: 0; }
+      flex-basis: calc(100% - 67px);
+      & > h3 { margin: 0; }
+      & > p { margin: 0.6rem 0; }
     }
 
   }
